--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "plutus-labs",
+  "name": "medini-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://medinichopra.github.io/",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
